Prevent fixed header from jumping on mobile scroll

--- a/css/style.css
+++ b/css/style.css
@@ -557,9 +557,12 @@ button {
   z-index: 1;
   padding: 2em;
   position: fixed;
+  top: 0;
   width: 100vw;
   box-shadow: 0 1px 2px 0 hsla(0, 0%, 0%, 0.2);
   background-color: var(--green);
+  transform: translateZ(0);
+  backface-visibility: hidden;
 }
 
 .modal.page ul {
